# manualito

./: .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  compose.ocr-gpu.yaml  compose.ocr-paddle-cpu.yaml  compose.yaml  docker-compose.ocr-gpu.yml  docker-compose.yml  pyproject.toml  setup.bat  setup.sh  sonar-project.properties  start.bat  start.sh  stop.bat  stop.sh
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Dockerfile  main.py  pytest.ini  requirements-test.txt  requirements.txt
backend/api/: .dockerignore  Dockerfile  __init__.py  annotations.py  api_app.py  client.py  config.py  dependencies.py  exceptions.py  locks.py  main.py  rate_limit.py  requirements.txt  responses.py  router.py  schemas.py  service.py
backend/api/account/: __init__.py  dto.py  repository.py  router.py  schemas.py  service.py
backend/api/assets/: __init__.py  storage.py
backend/api/auth/: __init__.py  audit.py  cookies.py  dependencies.py  emails.py  exceptions.py  passwords.py  router.py  schemas.py  service.py  tokens.py  username.py
backend/api/conversations/: __init__.py  dependencies.py  dto.py  exceptions.py  repository.py  router.py  schemas.py  service.py
backend/api/games/: __init__.py  bgg.py  dependencies.py  dto.py  exceptions.py  explanations.py  repository.py  router.py  schemas.py  service.py
backend/api/health/: __init__.py  router.py
backend/api/mail/: __init__.py  client.py
backend/api/manuals/: __init__.py  dto.py  exceptions.py  locks.py  pdf.py  pdfium.py  repository.py  router.py  schemas.py  service.py  storage.py  validation.py
backend/api/ocr/: __init__.py  router.py  schemas.py  service.py
backend/api/ratings/: __init__.py  dto.py  exceptions.py  repository.py  router.py  schemas.py
backend/api/root/: index.html  router.py
backend/api/routes/: __init__.py  auth.py  manuals.py  ocr.py
backend/api/worker/: __init__.py  celery.py
backend/common/: __init__.py  conversation_limits.py  crypto.py  http_client.py  log_safety.py  schemas.py
backend/common/filters/: __init__.py  health_log.py
backend/common/logging/: __init__.py  config.py  safety.py
backend/common/manual_text/: __init__.py  chunking.py  normalizer.py
backend/common/ocr/: __init__.py  postprocessing.py
backend/database/: Dockerfile  __init__.py  alembic.ini  base.py  config.py  session.py
backend/database/alembic/: env.py
backend/database/models/: __init__.py  asset.py  audit.py  auth.py  common.py  constants.py  conversation.py  explanation.py  game.py  game_follow.py  manual.py  rating.py  user.py
backend/llm/: Dockerfile  __init__.py  annotations.py  client.py  config.py  dependencies.py  exceptions.py  llm_app.py  main.py  prompt_builder.py  requirements.txt  router.py  schemas.py  service.py
backend/ocr/: .dockerignore  Dockerfile  __init__.py  config.py  contracts.py  exceptions.py  extractor.py  factory.py  main.py  ocr_app.py  requirements.txt  router.py  schemas.py  service.py
backend/ocr/engines/: __init__.py  common.py  paddle_cpu.py  preprocessing.py
backend/ocr/tests/: conftest.py  test_extractor.py
backend/python-base/: Dockerfile
backend/rag/: .dockerignore  Dockerfile  __init__.py  annotations.py  chunking.py  config.py  embeddings.py  exceptions.py  main.py  normalizer.py  rag_app.py  repository.py  requirements.txt  router.py  schemas.py  service.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: conftest.py  test_account.py  test_account_delete.py  test_api_client.py  test_api_config.py  test_api_endpoint.py  test_api_exceptions.py  test_assets_storage.py  test_auth_emails.py  test_auth_endpoint.py  test_auth_security.py  test_conversations_endpoint.py  test_conversations_service.py  test_db_config.py  test_games.py  test_games_create.py  test_games_detail.py  test_games_explanations.py  test_games_mine.py  test_mail_client.py  test_manuals_endpoint.py  test_manuals_locks.py  test_manuals_page_edit.py  test_manuals_repository.py  test_manuals_reprocess.py  test_manuals_service.py  test_manuals_validation.py  test_ratings.py  test_username.py  test_worker_tasks.py
backend/tests/common/: test_crypto.py  test_http_client.py
backend/tests/database/: test_models.py  test_session.py
backend/tests/llm/: conftest.py  test_llm_config.py
backend/tests/ocr/: __init__.py  conftest.py  test_extractor.py  test_ocr_endpoint.py  test_ocr_exceptions.py  test_preprocessing.py  test_tesseract.py
backend/tests/rag/: conftest.py  test_chunking.py  test_embeddings.py  test_normalizer.py  test_rag_exceptions.py  test_repository.py
backend/tts/: __init__.py
config/: backend.env  celery.env  database.env  frontend.env  llm.env  ocr.env
deploy/: README.md
deploy/compose/accelerators/: nvidia.yaml
deploy/compose/ocr/: paddle-cpu.yaml  paddle-gpu.yaml
deploy/linux/: manualito.sh
deploy/profiles/llm/: high.env  low.env
deploy/windows/: manualito.ps1
frontend/: .dockerignore  .npmrc  .prettierignore  .prettierrc.json  BACKEND_TODO.md  Dockerfile  README.md  RECOMMENDER_CONTRACT.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  tsr.config.json  vite.config.ts  vitest.config.ts
frontend/scripts/: screenshots.mjs
frontend/src/: main.tsx  vite-env.d.ts
frontend/src/app/: App.tsx  AppRouter.tsx  Providers.tsx  Sidebar.tsx  Topbar.tsx  router-context.ts  theme.test.tsx  theme.tsx
frontend/src/routes/: __root.tsx  _app.about.tsx  _app.capture.index.tsx  _app.capture.source.tsx  _app.chat.$gameId.tsx  _app.chat.$manualId.tsx  _app.conversations.$gameId.tsx  _app.explore.tsx  _app.game.$gameId.tsx  _app.history.tsx  _app.home.tsx  _app.manual.$manualId.tsx  _app.privacy.tsx  _app.processing.$manualId.tsx  _app.profile.tsx  _app.result.$manualId.tsx  _app.security.tsx  _app.settings.tsx  _app.tsx  _public.forgot.tsx  _public.login.tsx  (+20 more)
secrets/: README.md  flower_basic_auth.txt  postgres_password.txt  postgres_user.txt
tests/: conftest.py  pytest.ini  requirements-test.txt
(+311 files in other folders)
