[project]
name = "manualito"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "ipykernel>=7.2.0",
    "pytesseract>=0.3.13",
]

[dependency-groups]
api = [
    "email-validator==2.3.0",
    "fastapi==0.135.2",
    "httpx==0.28.1",
    "pillow==12.1.1",
    "psycopg[binary]==3.3.4",
    "pydantic==2.12.5",
    "pwdlib[argon2]==0.3.0",
    "python-multipart==0.0.22",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.50",
    "uvicorn[standard]==0.44.0",
]
database = [
    "alembic==1.18.4",
    "psycopg[binary]==3.3.4",
    "sqlalchemy==2.0.50",
]
ocr = [
    "fastapi==0.135.2",
    "numpy==2.4.4",
    "opencv-python-headless==4.13.0.92",
    "pillow==12.1.1",
    "python-multipart==0.0.22",
    "uvicorn[standard]==0.44.0",
]
ocr-paddle = [
    "paddleocr==3.4.0",
]
ocr-paddle-cpu = [
    "paddlepaddle==3.3.0",
]
ocr-paddle-gpu = [
    "paddlepaddle-gpu==3.2.0",
]
ocr-tesseract = [
    "pytesseract==0.3.13",
]
rag = [
    "chromadb-client==1.5.7",
    "fastapi==0.135.2",
    "numpy==2.4.4",
    "pydantic==2.12.5",
    "sentence-transformers==5.4.1",
    "uvicorn[standard]==0.44.0",
]
llm = [
    "fastapi==0.135.2",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "uvicorn[standard]==0.44.0",
]
test = [
    "alembic==1.18.4",
    "email-validator==2.3.0",
    "fastapi==0.135.2",
    "httpx==0.28.1",
    "numpy==2.4.4",
    "pillow==12.1.1",
    "psycopg[binary]==3.3.4",
    "pydantic==2.12.5",
    "pwdlib[argon2]==0.3.0",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "python-multipart==0.0.22",
    "ruff==0.15.14",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.50",
    "uvicorn[standard]==0.44.0",
]

[tool.uv]
package = false
conflicts = [
    [
        { group = "ocr-paddle-cpu" },
        { group = "ocr-paddle-gpu" },
    ],
]

[tool.uv.sources]
paddlepaddle = { index = "paddle-cpu" }
paddlepaddle-gpu = { index = "paddle-cu118" }

[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[[tool.uv.index]]
name = "paddle-cu118"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend", "tests"]
extend-exclude = [
    "htmlcov",
    "backend/ocr/.ocr_cache",
    "backend/rag/.hf_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N", "C4", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = false
log_level = "WARNING"

[tool.coverage.run]
branch = true
relative_files = true
source = ["backend"]
# El entorno Alembic (env.py) y las migraciones no son lógica unit-testeable:
# se ejercitan en el job de migraciones contra Postgres, no en pytest.
omit = ["backend/database/alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
