[project]
name = "manualito"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "chromadb>=1.5.9",
    "ipykernel>=7.2.0",
    "pytesseract>=0.3.13",
]

[dependency-groups]
api = [
    "aiosmtplib==5.1.1",
    "anyio==4.13.0",
    "celery[redis]==5.6.3",
    "email-validator==2.3.0",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pillow==12.2.0",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pypdfium2==5.9.0",
    "pwdlib[argon2]==0.3.0",
    "python-multipart==0.0.31",
    "redis==6.4.0",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.50",
    "uvicorn[standard]==0.49.0",
    "pydantic-settings==2.14.1",
]
database = [
    "alembic==1.18.4",
    "psycopg[binary]==3.3.4",
    "sqlalchemy==2.0.50",
]
ocr = [
    "fastapi==0.136.3",
    "numpy==2.3.5",
    "pillow==12.2.0",
    "python-multipart==0.0.31",
    "uvicorn[standard]==0.49.0",
]
ocr-paddle = [
    "paddleocr==3.6.0",
]
ocr-paddle-cpu = [
    "paddlepaddle==3.3.1",
]
ocr-paddle-gpu = [
    "paddlepaddle-gpu==3.3.1",
]
ocr-tesseract = [
    "pytesseract==0.3.13",
]
rag = [
    "chromadb-client==1.5.9",
    "fastapi==0.136.3",
    "numpy==2.3.5",
    "pydantic==2.13.4",
    "sentence-transformers==5.5.1",
    "torch==2.12.0",
    "uvicorn[standard]==0.49.0",
]
llm = [
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "uvicorn[standard]==0.49.0",
]
monitoring = [
    "flower==2.0.1",
]
test = [
    "aiosmtplib==5.1.1",
    "alembic==1.18.4",
    "anyio==4.13.0",
    "celery[redis]==5.6.3",
    "email-validator==2.3.0",
    "fastapi==0.136.3",
    "httpx==0.28.1",
    "numpy==2.3.5",
    "pillow==12.2.0",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pypdfium2==5.9.0",
    "pwdlib[argon2]==0.3.0",
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "python-multipart==0.0.31",
    "redis==6.4.0",
    "ruff==0.15.15",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.50",
    "uvicorn[standard]==0.49.0",
    "pydantic-settings==2.14.1",
]

[tool.uv]
package = false
conflicts = [
    [
        { group = "ocr-paddle-cpu" },
        { group = "ocr-paddle-gpu" },
    ],
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
paddlepaddle = { index = "paddle-cpu" }
paddlepaddle-gpu = { index = "paddle-cu118" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[[tool.uv.index]]
name = "paddle-cu118"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu118/"
explicit = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["backend", "tests"]
extend-exclude = [
    "htmlcov",
    "backend/ocr/.ocr_cache",
    "backend/rag/.hf_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "N", "C4", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = false
log_level = "WARNING"

[tool.coverage.run]
branch = true
relative_files = true
source = ["backend"]
# El entorno Alembic (env.py) y las migraciones no son lógica unit-testeable:
# se ejercitan en el job de migraciones contra Postgres, no en pytest.
omit = ["backend/database/alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
